[package]
name = "emulator-chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde_json = "1.0.97"
